fix(vue-menu): wrap to child width

--- a/src/assets/design-system/variables/components/data-display/_menu.scss
+++ b/src/assets/design-system/variables/components/data-display/_menu.scss
@@ -1,6 +1,6 @@
 $menu-z-index: 1000;
 $menu-bg: var(--surface-default-high);
-$menu-min-width: $space-120;
+$menu-min-width: $space-192;
 $menu-max-height: $space-120 * 1.65;
 $menu-shadow: var(--elevation-3);
 $menu-border-radius: 6px;
